package Part2_DesignPattern.Behavioral.Observer.CA5;

public interface TaiKhoanATM {
    boolean kiemTraSoDu(int soTienRut);
    void nhanThongBao(int soTienRut, boolean thanhCong);
}
